Prevent images from overflowing the main container

--- a/less/globals.less
+++ b/less/globals.less
@@ -29,6 +29,10 @@ code {
   margin: 0;
 }
 
+.content img {
+  max-width: 100%;
+}
+
 @media (min-width: 550px) {
   h1 {
     font-size: 4rem;
